# hexlet_pytest

./: .gitignore  Makefile  README.md  example.py  pyproject.toml  setup.cfg
tests/: test_example.py  test_stack.py
